# NavMesh

./: .gitmodules  CMakeLists.txt  NavMesh.sln  README.md
NavMeshEditor/: CMakeLists.txt  NavMeshEditor.vcxproj  NavMeshEditor.vcxproj.filters
NavMeshEditor/Include/: NavMeshEditorApp.h  PolygonUserController.h
NavMeshEditor/Source/: NavMeshEditorApp.cpp  main.cpp
NavMeshEditor/src/: NavMeshEditorApp.cpp  NavMeshEditorApp.h  PolygonUserController.cpp  PolygonUserController.h  main.cpp
NavMeshGenerator/: CMakeLists.txt  NavMeshGenerator.vcxproj  NavMeshGenerator.vcxproj.filters
NavMeshGenerator/Dependencies/clipper_ver5.1.6/: clipper.hpp
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Overview/: Changes.htm  Example.htm  FAQ.htm  License.htm  Rounding.htm  _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/Clipper/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/Clipper/Methods/: Execute.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/Clipper/Properties/: ForceSimple.htm  ReverseSolution.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/ClipperBase/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/ClipperBase/Methods/: AddPolygon.htm  AddPolygons.htm  Clear.htm  GetBounds.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyNode/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyNode/Methods/: GetNext.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyNode/Properties/: ChildCount.htm  Childs.htm  Contour.htm  IsHole.htm  Parent.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyTree/: _Body.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyTree/Methods/: Clear.htm  GetFirst.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Classes/PolyTree/Properties/: Total.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Routines/: Area.htm  CleanPolygon.htm  CleanPolygons.htm  OffsetPolyLines.htm  OffsetPolygons.htm  Orientation.htm  ReversePolygon.htm  ReversePolygons.htm  SimplifyPolygon.htm  SimplifyPolygons.htm
NavMeshGenerator/Dependencies/clipper_ver5.1.6/Documentation/Docs/Units/ClipperLib/Types/: ClipType.htm  EndType.htm  ExPolygons.htm  IntPoint.htm  IntRect.htm  JoinType.htm  PolyFillType.htm  PolyType.htm  Polygon.htm  Polygons.htm  long64.htm
NavMeshGenerator/Dependencies/polypartition/: polypartition.cpp  polypartition.h
NavMeshGenerator/Include/: GeneralPolygon.cpp  GeneralPolygon.h
NavMeshGenerator/Source/: NavMesh.cpp
NavMeshGenerator/src/: GeneralPolygon.cpp  GeneralPolygon.h  NavMesh.cpp  NavMesh.h
